project/force-app/main/default/objects/Brand__c/fields/Brand_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Brand_Ranking__c</fullName>
    <label>Brand Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Luxurious</fullName>
        </value>
        <value>
            <fullName>High-end</fullName>
        </value>
        <value>
            <fullName>Middle-High</fullName>
        </value>
        <value>
            <fullName>Middle</fullName>
        </value>
        <value>
            <fullName>Middle-Low</fullName>
        </value>
        <value>
            <fullName>Low</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>