project/force-app/main/default/objects/Brand__c/fields/Brand_Type__c.field-meta.xml
<CustomField>
    <fullName>Brand_Type__c</fullName>
    <label>Brand Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>International</fullName><default>false</default><label>International</label></value>
            <value><fullName>National</fullName><default>false</default><label>Domestic/National</label></value>
            <value><fullName>Local</fullName><default>false</default><label>Local</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>