project/force-app/main/default/objects/Brand__c/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <label>Country of Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>