project/force-app/main/default/objects/Brand__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>A</fullName>
            <label>Group A</label>
        </value>
        <value>
            <fullName>B</fullName>
            <label>Group B</label>
        </value>
        <value>
            <fullName>C</fullName>
            <label>Group C</label>
        </value>
        <value>
            <fullName>D</fullName>
            <label>Group D</label>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>