project/force-app/main/default/objects/Brand__c/fields/Detail_Origin__c.field-meta.xml
<CustomField>
    <fullName>Detail_Origin__c</fullName>
    <label>Origin Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>USA</fullName>
        </value>
        <value>
            <fullName>UK</fullName>
        </value>
        <value>
            <fullName>France</fullName>
        </value>
        <value>
            <fullName>Italy</fullName>
        </value>
        <value>
            <fullName>Spain</fullName>
        </value>
        <value>
            <fullName>Germany</fullName>
        </value>
        <value>
            <fullName>Japan</fullName>
        </value>
        <value>
            <fullName>Korea</fullName>
        </value>
        <value>
            <fullName>Singapore</fullName>
        </value>
        <value>
            <fullName>Thailand</fullName>
        </value>
        <value>
            <fullName>Hong_Kong</fullName>
        </value>
        <value>
            <fullName>Taiwan</fullName>
        </value>
        <value>
            <fullName>Australia</fullName>
        </value>
        <value>
            <fullName>India</fullName>
        </value>
        <value>
            <fullName>China</fullName>
        </value>
        <value>
            <fullName>Philippines</fullName>
        </value>
        <value>
            <fullName>Malaysia</fullName>
        </value>
        <value>
            <fullName>Vietnam</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>