project/force-app/main/default/objects/Brand__c/fields/Equivalent_Brands_In_Vincom__c.field-meta.xml
<CustomField>
    <fullName>Equivalent_Brands_In_Vincom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equivalent Brands in Vincom</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Equivalent Brands in Vincom</relationshipLabel>
    <relationshipName>Equivalent_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>