project/force-app/main/default/objects/Brand__c/fields/Investment_Cost_m2__c.field-meta.xml
<CustomField>
    <fullName>Investment_Cost_m2__c</fullName>
    <label>Investment Cost per m2</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>