project/force-app/main/default/objects/Brand__c/fields/Is_a_Chain__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Chain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Chain?</label>
    <type>Checkbox</type>
</CustomField>