project/force-app/main/default/objects/Brand__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Link Logo</label>
    <type>Url</type>
</CustomField>