project/force-app/main/default/objects/Brand__c/fields/Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Category__c</fullName>
    <label>Primary Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Fashion</fullName>
        </value>
        <value>
            <fullName>Accessories</fullName>
        </value>
        <value>
            <fullName>Cosmetic</fullName>
        </value>
        <value>
            <fullName>F&amp;B</fullName>
        </value>
        <value>
            <fullName>Cinema</fullName>
        </value>
        <value>
            <fullName>Entertainment</fullName>
        </value>
        <value>
            <fullName>Furniture</fullName>
        </value>
        <value>
            <fullName>Electronics</fullName>
        </value>
        <value>
            <fullName>Service</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>