project/force-app/main/default/objects/Brand__c/fields/Market_Usual_Rental_Area__c.field-meta.xml
<CustomField>
    <fullName>Market_Usual_Rental_Area__c</fullName>
    <label>Market Usual Rental Area</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>