project/force-app/main/default/objects/Brand__c/fields/Number_Of_RO_In_Shop_House__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_RO_In_Shop_House__c</fullName>
    <label>Number of Shophouses</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>