project/force-app/main/default/objects/Brand__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>International</fullName>
        </value>
        <value>
            <fullName>Region</fullName>
        </value>
        <value>
            <fullName>Vietnam</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>