project/force-app/main/default/objects/Brand__c/fields/Price_Range_Of_Products__c.field-meta.xml
<CustomField>
    <fullName>Price_Range_Of_Products__c</fullName>
    <label>Product Price Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>