project/force-app/main/default/objects/Brand__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue Generated</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>