project/force-app/main/default/objects/Brand__c/fields/RO_Model__c.field-meta.xml
<CustomField>
    <fullName>RO_Model__c</fullName>
    <label>Store Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Kiosk</fullName>
        </value>
        <value>
            <fullName>Inline</fullName>
        </value>
        <value>
            <fullName>Island</fullName>
        </value>
        <value>
            <fullName>Corner</fullName>
        </value>
        <value>
            <fullName>Anchor</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>