project/force-app/main/default/objects/Brand__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Mr</fullName><default>false</default><label>Mr</label></value>
            <value><fullName>Mrs</fullName><default>false</default><label>Mrs</label></value>
            <value><fullName>Ms</fullName><default>false</default><label>Ms</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>