project/force-app/main/default/objects/Brand__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Baby</fullName>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Lingerie</fullName>
            </value>
            <value>
                <fullName>Uniform</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
            <value>
                <fullName>Glasses</fullName>
            </value>
            <value>
                <fullName>Belt_Wallet</fullName>
            </value>
            <value>
                <fullName>Scarf_Hat</fullName>
            </value>
            <value>
                <fullName>Skincare</fullName>
            </value>
            <value>
                <fullName>Makeup</fullName>
            </value>
            <value>
                <fullName>Perfume</fullName>
            </value>
            <value>
                <fullName>Hair_Care</fullName>
            </value>
            <value>
                <fullName>Body_Care</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Fast_Food</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
            <value>
                <fullName>Hot_Pot</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>