project/force-app/main/default/objects/Brand__c/fields/Suitable_Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Suitable_Market_Project__c</fullName>
    <label>Suitable Market/Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>