project/force-app/main/default/objects/Brand__c/fields/Target_Customer__c.field-meta.xml
<CustomField>
    <fullName>Target_Customer__c</fullName>
    <label>Target Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Teenagers</fullName>
        </value>
        <value>
            <fullName>Young_Adults</fullName>
        </value>
        <value>
            <fullName>Middle_Aged</fullName>
        </value>
        <value>
            <fullName>Elderly</fullName>
        </value>
        <value>
            <fullName>Families</fullName>
        </value>
        <value>
            <fullName>Office_Workers</fullName>
        </value>
        <value>
            <fullName>All</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>