project/force-app/main/default/objects/Brand__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title/Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Manager</fullName><default>false</default><label>Manager</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>