project/force-app/main/default/objects/Brand__c/fields/Total_Area_Renting_At_Vincom__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Renting_At_Vincom__c</fullName>
    <label>Total Area Renting at Vincom</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>