project/force-app/main/default/objects/Brand__c/fields/Vincom_Usual_Rental_Area__c.field-meta.xml
<CustomField>
    <fullName>Vincom_Usual_Rental_Area__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usual Rental Area at Vincom</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>