project/force-app/main/default/objects/Brand__c/fields/Website_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Website_Facebook__c</fullName>
    <label>Website/Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>