project/force-app/main/default/objects/Brand__c/validationRules/Require_Contact_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact_Info</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Contact__c), OR(ISBLANK(Mobile__c), ISBLANK(Email__c)))</errorConditionFormula>
    <errorMessage>Must enter Contact or (Mobile + Email)</errorMessage>
</ValidationRule>