project/force-app/main/default/objects/Brand__c/listViews/Active_Brands.listView-meta.xml
<ListView>
    <fullName>Active_Brands</fullName>
    <columns>NAME</columns>
    <columns>Brand_Category__c</columns>
    <columns>Country_of_Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Brands</label>
</ListView>