project/force-app/main/default/objects/Brand__c/listViews/All_Brands.listView-meta.xml
<ListView>
    <fullName>All_Brands</fullName>
    <columns>NAME</columns>
    <columns>Brand_Code__c</columns>
    <columns>Brand_Category__c</columns>
    <columns>Country_of_Origin__c</columns>
    <columns>Brand_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Brands</label>
</ListView>