project/force-app/main/default/objects/Brand__c/listViews/My_Brands.listView-meta.xml
<ListView>
    <fullName>My_Brands</fullName>
    <columns>NAME</columns>
    <columns>Brand_Code__c</columns>
    <columns>Brand_Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Brands</label>
</ListView>